--- a/src/manifest.chrome.json
+++ b/src/manifest.chrome.json
@@ -1,12 +1,12 @@
 {
   "manifest_version": 2,
-  "name": "__MSG_extensionName__",
-  "description": "__MSG_extensionDescription__",
-  "version": "0.4.0",
+  "name": "DSW",
+  "description": "Deny Service Worker",
+  "version": "0.1.0",
   "default_locale": "en",
   
-  "author": "toshi",
-  "homepage_url": "https://www.bugbugnow.net/",
+  "author": "Kenrick",
+  "homepage_url": "https://www.kenrick95.org/",
   
   "background": {
     "page": "/html/background.html"
@@ -17,7 +17,7 @@
   },
   
   "browser_action": {
-    "default_title": "__MSG_extensionName__"
+    "default_title": "DSW"
   },
   
   "content_scripts": [{
